update href in navbar

--- a/templates/register_account.html
+++ b/templates/register_account.html
@@ -14,10 +14,10 @@
     <header class="header" id="header">
       <div class="">random image</div>
       <nav class="" id="nav-bar">
-        <a href="home.html">Home</a>
+        <a href="/">Home</a>
         <a href="">About Us</a>
         <a href="">Pricing</a>
-        <a href="">My Account</a>
+        <a href="/account">My Account</a>
         <a href="">Browse</a>
         <a href="">FAQs</a>
         <a href="">Contact</a>
@@ -29,10 +29,10 @@
           onclick="showVerticalNavbar()"
         />
         <div id="hidden-vertical-navbar">
-          <a href="home.html">Home</a>
+          <a href="/">Home</a>
           <a href="">About Us</a>
           <a href="">Pricing</a>
-          <a href="">My Account</a>
+          <a href="/account">My Account</a>
           <a href="">Browse</a>
           <a href="">FAQs</a>
           <a href="">Contact</a>
