--- a/templates/header.html
+++ b/templates/header.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
     <title>Document</title>
   </head>
   <body>
     <header class="header" id="header">
-      <div class="">random image</div>
-      <nav class="" id="nav-bar">
+      <div>random image</div>
+      <nav id="nav-bar">
         <a href="home.html">Home</a>
         <a href="">About Us</a>
         <a href="">Pricing</a>
@@ -21,7 +21,7 @@
     </header>
     <nav id="mobile-vertical-navbar">
       <img
-        src="vertical_menu_button.png"
+        src="../vertical_menu_button.png"
         id="vertical-menu-button"
         onclick="showVerticalNavbar()"
       />
@@ -34,7 +34,7 @@
         <a href="">FAQs</a>
         <a href="">Contact</a>
       </div>
-      <script src="general.js"></script>
+      <script src="../general.js"></script>
     </nav>
   </body>
 </html>
