--- a/templates/home.html
+++ b/templates/home.html
@@ -7,15 +7,15 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="home.css" />
-    <link rel="stylesheet" href="header.css"/>
+    <link rel="stylesheet" href="../styles/home.css" />
+    <link rel="stylesheet" href="../styles/header.css"/>
     <title>Document</title>
   </head>
   <body style="height: 10000px">
     <div id="body-container">
-      <embed type="text/html" src="header.html">
-        <div>
-          <img src="banner.png" id="banner" />
+      <iframe src="header.html"></iframe>
+      <div>
+          <img src="../banner.png" id="banner" />
           <div id="image-container">
             <h1>Your App Name</h1>
             <h4>Your Slogan here here <br>  your slogan your slogan here</h2>
@@ -24,6 +24,6 @@
     </div>
    
 
-    <script src="general.js"></script>
+    <script src="../general.js"></script>
   </body>
 </html>
