--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,15 @@
 * {
   box-sizing: border-box;
 }
-embed {
+
+iframe {
   top: 0px;
   width: 100%;
   height: 100%;
   display: flex;
   position: fixed;
   z-index: 100;
+  border: none;
 }
 #banner {
   background-size: cover;
