Fix minor header bugs
+ Working header
+ Footer

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/header.css" />
-    <title>Document</title>
+    <title>Header</title>
   </head>
   <body>
     <header class="header" id="header">
       <div>random image</div>
       <nav id="nav-bar">
-        <a href="home.html">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
+        <a href="home.html" target="_parent">Home</a>
+        <a href="" target="_parent">About Us</a>
+        <a href="" target="_parent">Pricing</a>
+        <a href="account.html" target="_parent">My Account</a>
+        <a href="" target="_parent">Browse</a>
+        <a href="" target="_parent">FAQs</a>
+        <a href="" target="_parent">Contact</a>
       </nav>
     </header>
     <nav id="mobile-vertical-navbar">
@@ -26,15 +26,15 @@
         onclick="showVerticalNavbar()"
       />
       <div id="hidden-vertical-navbar">
-        <a href="home.html">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
+        <a href="home.html" target="_parent">Home</a>
+        <a href="" target="_parent">About Us</a>
+        <a href="" target="_parent">Pricing</a>
+        <a href="account.html" target="_parent">My Account</a>
+        <a href="" target="_parent">Browse</a>
+        <a href="" target="_parent">FAQs</a>
+        <a href="" target="_parent">Contact</a>
       </div>
-      <script src="../general.js"></script>
     </nav>
+    <script src="../general.js"></script>
   </body>
 </html>
