--- a/templates/home.html
+++ b/templates/home.html
@@ -9,11 +9,12 @@
     />
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/header.css"/>
-    <title>Document</title>
+    <title>Home</title>
   </head>
-  <body style="height: 10000px">
+  <body>
     <div id="body-container">
-      <iframe src="header.html"></iframe>
+      <iframe src="header.html" id="iframe-header"></iframe>
+      <!-- <embed src="header.html"> -->
       <div>
           <img src="../banner.png" id="banner" />
           <div id="image-container">
@@ -23,7 +24,7 @@
         </div>
     </div>
    
-
+    <iframe src="footer.html" id="iframe-footer"></iframe>
     <script src="../general.js"></script>
   </body>
 </html>
