--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@
   right: 0;
   position: fixed;
   padding-right: 20px;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: row;
