--- a/styles/home.css
+++ b/styles/home.css
@@ -2,15 +2,16 @@
   box-sizing: border-box;
 }
 
-iframe {
+#iframe-header {
   top: 0px;
   width: 100%;
-  height: 100%;
+  height: 100px;
   display: flex;
   position: fixed;
   z-index: 100;
   border: none;
 }
+
 #banner {
   background-size: cover;
   width: 100%;
@@ -30,6 +31,10 @@ iframe {
 #image-container h1 {
   font-size: 7vw;
   z-index: -1;
+}
+#iframe-footer {
+  border: none;
+  width: 100%;
 }
 @media (max-width: 1199px) {
   #image-container {
