--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@
         id="vertical-menu-button"
         onclick="showVerticalNavbar()"
       />
-      <div id="hidden-vertical-navbar">
+      <div id="hidden-vertical-navbar" style="display: none">
         <a href="home.html" target="_parent">Home</a>
         <a href="" target="_parent">About Us</a>
         <a href="" target="_parent">Pricing</a>
