--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,37 +8,13 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/static/general.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/styles/home.css" />
+    <link rel="stylesheet" href="/static/styles/header.css"/>
+    <title>Forgot Password</title>
   </head>
-  <body style="height: 10000px">
-    <header class="header" id="header">
-      <div class="">random image</div>
-      <nav class="" id="nav-bar">
-        <a href="/">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="/account">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
-      </nav>
-    </header>
-    <nav id="mobile-vertical-navbar">
-      <img
-        src="vertical_menu_button.png"
-        id="vertical-menu-button"
-        onclick="showVerticalNavbar()"
-      />
-      <div id="hidden-vertical-navbar">
-        <a href="/">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="/account">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
-      </div>
-    </nav>
+    <div id="body-container">
+      <iframe src="/header" id="iframe-header"></iframe>
+    </div>
 
     <div id="forgot-password">
       <h1>Forgot Password</h1>
@@ -72,6 +48,7 @@
         </div>
     {% endif %}
 
+    <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
   </body>
 </html>
