--- a/templates/register_account.html
+++ b/templates/register_account.html
@@ -8,39 +8,15 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/static/general.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/styles/home.css" />
+    <link rel="stylesheet" href="/static/styles/header.css"/>
+    <title>Register Account</title>
   </head>
   <body style="height: 10000px">
-    <header class="header" id="header">
-      <div class="">random image</div>
-      <nav class="" id="nav-bar">
-        <a href="/">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="/account">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
-      </nav>
-      <nav id="mobile-vertical-navbar">
-        <img
-          src="/static/img/vertical_menu_button.png"
-          id="vertical-menu-button"
-          onclick="showVerticalNavbar()"
-        />
-        <div id="hidden-vertical-navbar">
-          <a href="/">Home</a>
-          <a href="">About Us</a>
-          <a href="">Pricing</a>
-          <a href="/account">My Account</a>
-          <a href="">Browse</a>
-          <a href="">FAQs</a>
-          <a href="">Contact</a>
-        </div>
-      </nav>
-    </header>
-    <!-- <img src="/static/img/banner.png" id="banner" /> -->
-     
+    <div id="body-container">
+      <iframe src="/header" id="iframe-header"></iframe>
+    </div>
+
     <form action="/register" method="POST" id="register-form" enctype="multipart/form-data">
       <!-- email -->
       <div>
@@ -147,7 +123,7 @@
         {% endif %}
     {% endwith %}
 
-
+    <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
   </body>
 </html>
