--- a/templates/register_account.html
+++ b/templates/register_account.html
@@ -26,7 +26,7 @@
       <!-- phone -->
       <div>
         <label for="phone">Phone Number*</label>
-        <input type="tel" name="phone" id="phone" required />
+        <input type="tel" name="phone" id="phone" minlength="8" maxlength="10" required/>
       </div>
       <!-- password -->
       <div>
