--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,13 @@
         <a href="" target="_parent">About Us</a>
         <a href="" target="_parent">Pricing</a>
         <a href="account.html" target="_parent">My Account</a>
-        <a href="" target="_parent">Browse</a>
+        <div class="dropdown">
+          <button class="dropdown-button">Browse</button>
+          <div class="dropdown-content">
+            <a href="#">Browse By Name</a>
+            <a href="#">Browse By Category</a>
+          </div>
+        </div>
         <a href="" target="_parent">FAQs</a>
         <a href="" target="_parent">Contact</a>
       </nav>
