--- a/templates/account.html
+++ b/templates/account.html
@@ -26,8 +26,7 @@
             <p>Address: {{user_data.address}}</p>
             <p>Email: {{user_data.email}}</p>
             <p>Phone: {{user_data.phone}}</p>
-            <!-- TODO: IMAGE!! MISSING -->
-            <!-- <img src="{{user_data.profile_picture}}" alt="Profile Picture" />  -->
+            <img id="profile-image" class="profile-image" src="{{user_data.image}}" alt="profile picture">
         
             <!-- temporary logout -->
             <a href="/logout">Log out</a>
