--- a/templates/header.html
+++ b/templates/header.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="/static/styles/header.css" />
     <title>Header</title>
   </head>
   <body>
     <header class="header" id="header">
       <div>random image</div>
       <nav id="nav-bar">
-        <a href="home.html" target="_parent">Home</a>
+        <a href="/" target="_parent">Home</a>
         <a href="" target="_parent">About Us</a>
         <a href="" target="_parent">Pricing</a>
-        <a href="account.html" target="_parent">My Account</a>
+        <a href="/account" target="_parent">My Account</a>
         <div class="dropdown">
           <button class="dropdown-button">Browse</button>
           <div class="dropdown-content">
-            <a href="#">Browse By Name</a>
-            <a href="#">Browse By Category</a>
+            <a href="/courses/browse/name" target="_parent">Browse By Name</a>
+            <a href="/courses/browse/category" target="_parent">Browse By Category</a>
           </div>
         </div>
         <a href="" target="_parent">FAQs</a>
@@ -41,6 +41,6 @@
         <a href="" target="_parent">Contact</a>
       </div>
     </nav>
-    <script src="../general.js"></script>
+    <script src="/static/general.js"></script>
   </body>
 </html>
