updated privacy in app.py, change to static

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../styles/general.css" />
-    <link rel="stylesheet" href="../styles/header.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="/static/styles/general.css" />
+    <link rel="stylesheet" href="/static/styles/header.css" />
+    <link rel="stylesheet" href="/static/styles/home.css" />
+    <link rel="stylesheet" href="/static/styles/footer.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -59,7 +59,7 @@
 <body>
     <div id="body-container">
         <!-- Load the header from an external file to keep it consistent -->
-        <iframe src="header.html" id="iframe-header"></iframe>
+        <iframe src="/header" id="iframe-header"></iframe>
     </div>
 
     <div class="container">
@@ -103,9 +103,9 @@
     </div>
 
     <!-- Load the footer from an external file to keep it consistent -->
-    <iframe src="footer.html" id="iframe-footer"></iframe>
+    <iframe src="/footer" id="iframe-footer"></iframe>
 
-    <script src="../general.js"></script>
+    <script src="/static/general.js"></script>
 </body>
 
 </html>
