--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,9 @@
           <button class="dropdown-button">Browse</button>
           <div class="dropdown-content">
             <a href="/courses/browse/name" target="_parent">Browse By Name</a>
-            <a href="/courses/browse/category" target="_parent">Browse By Category</a>
+            <a href="/courses/browse/category" target="_parent"
+              >Browse By Category</a
+            >
           </div>
         </div>
         <a href="" target="_parent">FAQs</a>
@@ -36,7 +38,15 @@
         <a href="" target="_parent">About Us</a>
         <a href="" target="_parent">Pricing</a>
         <a href="account.html" target="_parent">My Account</a>
-        <a href="" target="_parent">Browse</a>
+        <div class="dropdown">
+          <button class="dropdown-button">Browse</button>
+          <div class="dropdown-content">
+            <a href="/courses/browse/name" target="_parent">Browse By Name</a>
+            <a href="/courses/browse/category" target="_parent"
+              >Browse By Category</a
+            >
+          </div>
+        </div>
         <a href="" target="_parent">FAQs</a>
         <a href="" target="_parent">Contact</a>
       </div>
