--- a/templates/browse_courses_category.html
+++ b/templates/browse_courses_category.html
@@ -24,9 +24,9 @@
         <div class="course-card-container">
           {% for course in courses %}
             <div class="course-card">
-              <img src="{{ course.img }}" alt="{{ course.key.name }}">
+              <img src="{{ course.image }}" alt="{{ course.name }}">
               <div class="course-info">
-                <h3><a href="/courses/{{ course.slug }}">{{ course.key.name }}</a></h3>
+                <h3><a href="/courses/{{ course.key.id }}">{{ course.name }}</a></h3>
                 <p>Category: {{ course.category }}</p>
                 <p>Price: ${{ course.price }}</p>
               </div>
