--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/styles/home.css" />
     <link rel="stylesheet" href="/static/styles/header.css"/>
     <link rel="stylesheet" href="/static/general.css">
-    <title>Home</title>
+    <title>Order confirmation</title>
   </head>
   <body>
     <div id="body-container">
