add id and classes to image

--- a/templates/browse_courses_name.html
+++ b/templates/browse_courses_name.html
@@ -22,7 +22,7 @@
         <h1>Browse Courses by Name</h1>
         {% for course in courses %}
             <div class="course-card">
-                <img src="{{ course.image }}" alt="{{ course.name }}">
+                <img id="course-image" class="course-image" src="{{ course.image }}" alt="{{ course.name }}">
                 <div class="course-info">
                     <h3><a href="/courses/{{ course.id }}">{{ course.name }}</a></h3>
                     <p>Category: {{ course.category }}</p>
