--- a/templates/browse_courses_category.html
+++ b/templates/browse_courses_category.html
@@ -24,7 +24,7 @@
         <div class="course-card-container">
           {% for course in courses %}
             <div class="course-card">
-              <img src="{{ course.image }}" alt="{{ course.name }}">
+              <img id="course-image" class="course-image" src="{{ course.image }}" alt="{{ course.name }}">
               <div class="course-info">
                 <h3><a href="/courses/{{ course.key.id }}">{{ course.name }}</a></h3>
                 <p>Category: {{ course.category }}</p>
