update to make a reset link when password is forgotten

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -18,7 +18,7 @@
 
     <div id="forgot-password">
       <h1>Forgot Password</h1>
-      <form action="/forgot_password" method="POST">
+      <form action="/forgot-password" method="POST">
         <label for="email">Enter your email:</label>
         <input type="email" name="email" id="email"/>
         <br>
@@ -27,26 +27,22 @@
     </div>
 
     <!-- display whether email does not exist or instruction -->
-    {% with messages = get_flashed_messages() %}
+    {% with link = get_flashed_messages(category_filter='link') %}
+        {% if link %}
+        <div id="reset-link" class="reset-link">
+          We have received a request to reset your password. <br>
+          Please click the following link to reset your password:
+        </div>
+        <a href="{{link[-1]}}" id="reset-link" class="reset-link">Reset password</a>
+        {% endif %}
+    {% endwith %}
+
+    {% with messages = get_flashed_messages(category_filter='message') %}
         {% if messages %}
         <p class="flashed-msg">{{ messages[-1]}}</p>
         {% endif %}
     {% endwith %}
 
-    {% if reset_link %}
-        <div id="reset-link">
-            <p>Reset Password</p>
-            <form action="/reset_password" method="POST">
-                <label for="password">New password</label>
-                <input type="password" name="password" id="password"/>
-                <br>
-                <label for="confirm_password">Confirm password</label>
-                <input type="password" name="confirm-password" id="confirm-password"/>
-                <br>
-                <button type="submit">Reset</button>
-            </form>
-        </div>
-    {% endif %}
 
     <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
