--- a/templates/account.html
+++ b/templates/account.html
@@ -46,7 +46,7 @@
             </form>
             
             <!-- forgot password link -->
-            <a href="/forgot_password">Forgot Password?</a>
+            <a href="/forgot-password">Forgot Password?</a>
             <a href="/register">Register</a>
 
             <!-- get flashed mesage -->
