--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -20,7 +20,7 @@
     <div id="course-detail">
       <h1>{{ course.name }}</h1>
       <p>{{ course.description }}</p>
-      <img src="{{course.image}}" alt="{{course.name}}">
+      <img id="course-image" class="course-image" src="{{course.image}}" alt="{{course.name}}">
       <p><strong>Category:</strong> {{ course.category }}</p>
       <p><strong>Instructor:</strong> {{ course.instructor }}</p>
       <p><strong>Price:</strong> ${{ course.price }}</p>
